--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,75 +1,45 @@
-<h1>contact</h1>
-<html lang="es">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Formulario de contacto</title>
-
-  <!-- Enlace al documento css. no aplicable en codepen.
-  <link rel="stylesheet" type="text/css" href="contact-form.css">
--->
-  
+  <title>Contacto empresarial !</title>  
   </head>
+<style>
+body {
+  background-color: lightblue;
+}
 
+h1 {
+  color: white;
+  text-align: center;
+}
 
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
 <body>  
   
-  <!-- formulario de contacto en html y css -->  
-
   <div class="contact_form">
+    <div class="formulario de Contacto"> <center>
+    
+     <p> <h1>Formulario de Contacto Río Arriba </h1> </p>
+         <p></p>
+          <h3>Escríbenos y en Breve nos pondremos en contacto contigo...</h3><br> <br><br> <br><br> <br>
 
-    <div class="formulario">      
-      <h1>Formulario de contacto</h1>
-        <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
 
+          <p></p>
 
-          <form action="submeter-formulario.php" method="post">       
-
-            
-                <p>
-                  <label for="nombre" class="colocar_nombre">Nombre
-                    <span class="obligatorio">*</span>
-                  </label>
-                    <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
-                </p>
-              
-                <p>
-                  <label for="email" class="colocar_email">Email
-                    <span class="obligatorio">*</span>
-                  </label>
-                    <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
-                </p>
-            
-                <p>
-                  <label for="telefone" class="colocar_telefono">Teléfono
-                  </label>
-                    <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
-                </p>    
-              
-                <p>
-                  <label for="website" class="colocar_website">Sitio web
-                  </label>
-                    <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
-                </p>    
-              
-                <p>
-                  <label for="asunto" class="colocar_asunto">Asunto
-                    <span class="obligatorio">*</span>
-                  </label>
-                    <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
-                </p>    
-              
-                <p>
-                  <label for="mensaje" class="colocar_mensaje">Mensaje
-                    <span class="obligatorio">*</span>
-                  </label>                     
-                                    <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
-                                </p>                    
-              
-                <button type="submit" name="enviar_formulario" id="enviar"><p>Enviar</p></button>
-
-                <p class="aviso">
-                  <span class="obligatorio"> * </span>los campos son obligatorios.
-                </p>          
+          <p> <b> Nombre respresentante oficial: Patricio Del Río </p> </b>
+            <p></p>
+          <p> Email: Rio_Arriba@.vivenvias.com</p>
+            <p></p>
+          <p> Teléfono de Contacto: 600.600.7000</p>
+             <p></p>
+          <p> Sitio Web: Servivio/Audiovisual/Rioarriba.com</p>
+            <p></p>
+                           
+        
             
           </form>
     </div>  
